# projeto-estudos

./: .gitignore  CLAUDE.md  PlanNewCaky.md  README.md
backend/: .env.example  Cargo.toml
backend-python/: .env.example  requirements.txt  reset_db.py
backend/migrations/: 001_initial_schema.sql  002_add_document_extraction_columns.sql  002_create_study_sessions_table.sql  003_create_documents_table.sql  003_study_plans.sql  004_create_topics_table.sql  004_json_study_plans.sql  005_create_chats_table.sql  006_create_messages_table.sql
backend/src/: config.rs  errors.rs  main.rs  prompts.rs
backend/src/api/: mod.rs  upload.rs
backend/src/graphql/: context.rs  mod.rs  schema.rs
backend/src/graphql/resolvers/: auth.rs  chat.rs  document.rs  message.rs  mod.rs  planning.rs  session.rs  topic.rs
backend/src/graphql/types/: chat.rs  document.rs  message.rs  mod.rs  session.rs  study_plan.rs  topic.rs  user.rs
backend/src/services/: mod.rs
backend/src/services/auth/: jwt.rs  password.rs
backend/src/services/documents/: ingestion.rs  mod.rs  storage_client.rs
backend/src/services/messages/: ai_client.rs  chat.rs  mod.rs
backend/src/services/planning/: mod.rs
backend/src/services/sessions/: mod.rs
backend/src/storage/: mod.rs
backend/src/storage/chats/: mod.rs
backend/src/storage/documents/: mod.rs
backend/src/storage/messages/: mod.rs
backend/src/storage/profiles/: mod.rs
backend/src/storage/sessions/: mod.rs
backend/src/storage/study_plans/: mod.rs
backend/src/storage/topics/: mod.rs
backend/src/storage/users/: mod.rs
(+87 files in other folders)
